--- a/listing.html
+++ b/listing.html
@@ -25,8 +25,8 @@
         </a>
         <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
           <form
+            id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-            onsubmit=""
           >
             <img
               src="./assets/icons/search-icon.png"
@@ -163,5 +163,6 @@
     </footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="./src/js/listing.js"></script>
   </body>
 </html>
