--- a/profile.html
+++ b/profile.html
@@ -26,10 +26,10 @@
             >Pearls</span
           >
         </a>
-        <!-- <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
+        <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
             <form
+              id="searchForm"
               class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-              onsubmit=""
             >
               <img
                 src="./assets/icons/search-icon.png"
@@ -38,7 +38,7 @@
               />
               <input id="searchInput" class="bg-secondary text-dark search-input form-control" />
             </form>
-          </div> -->
+          </div>
       </div>
       <div class="d-flex nav-item dropdown w-25 justify-content-end">
         <a
@@ -167,5 +167,6 @@
     </footer>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="./src/js/profile.js"></script>
   </body>
 </html>
