--- a/search.html
+++ b/search.html
@@ -78,36 +78,31 @@
               >Search ""</span
             >
           </h1>
-          <div class="search-results">
+          <div class="posts-container">
             <div class="card bg-dark py-2 placeholder-glow">
-              <div id="tags" class="ps-2">
-                <!-- <div
-                  class="badge bg-secondary text-primary rounded-pill px-3 py-2 mb-2"
-                >
-                  hello
-                </div> -->
+              <div class="d-flex justify-content-between">
+                <div id="tags" class="px-2">
+                </div>
+                <div class="owners-options mx-2"></div>
               </div>
               <div class="ps-2 d-flex align-items-center">
-                <a
-                  href="#"
-                  class="text-decoration-none d-flex align-items-center"
-                >
-                  <img class="profile-images placeholder rounded-circle" />
-                  <h2 class="h3 m-0 ms-2 fs-4 placeholder">Name</h2>
-                </a>
-                <!-- <span class="mx-2 text-light">-</span> -->
-                <!-- make the span below anchor tag and remove ms-2, as well as un-commenting the span above -->
-                <!-- <span class="text-light text-decoration-none fs-4 ms-2">- Item</span> -->
-              </div>
-              <a href="#">
-                <div
-                  class="listings-images mt-2 w-100 overflow-hidden position-relative"
-                >
+                <div class="d-flex align-items-center text-secondary">
                   <img
-                    class="position-absolute bottom-0 placeholder text-secondary"
+                    id="userImage"
+                    class="profile-images placeholder rounded-circle"
                   />
+                  <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">
+                    Name
+                  </h2>
                 </div>
-              </a>
+              </div>
+              <div
+                class="listings-images mt-2 w-100 overflow-hidden position-relative"
+              >
+                <img
+                  class="position-absolute bottom-0 placeholder text-secondary"
+                />
+              </div>
               <div class="listings-descriptions mx-2 mt-2 placeholder">
                 Description
               </div>
