--- a/welcome.html
+++ b/welcome.html
@@ -91,8 +91,8 @@
             Auctions
           </p>
           <form
+            id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-            onsubmit=""
           >
             <img
               src="./assets/icons/search-icon.png"
