added search functionality to all pages

--- a/listing.html
+++ b/listing.html
@@ -81,17 +81,17 @@
           </div>
           <div class="card bg-dark py-2 placeholder-glow">
             <div class="ps-2 d-flex align-items-center">
-              <div class="d-flex align-items-center text-secondary">
-                <!-- <a
-                  href="#"
+              <div class="d-flex align-items-center justify-content-between w-100 text-secondary">
+                <a
+                  id="userLink"
                   class="text-decoration-none d-flex align-items-center"
-                > -->
-                <img
-                  id="userImage"
-                  class="profile-images placeholder rounded-circle"
-                />
-                <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">Name</h2>
-                <!-- </a> -->
+                >
+                  <img
+                    id="userImage"
+                    class="profile-images placeholder rounded-circle"
+                  />
+                  <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">Name</h2>
+                </a>
               </div>
               <div class="owners-options"></div>
             </div>
@@ -164,5 +164,6 @@
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="./src/js/listing.js"></script>
+    <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
 </html>
