--- a/index.html
+++ b/index.html
@@ -211,5 +211,6 @@
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="./src/js/index.js"></script>
+    <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
 </html>
