--- a/profile.html
+++ b/profile.html
@@ -168,5 +168,6 @@
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="./src/js/profile.js"></script>
+    <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
 </html>
