--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
           </form>
         </div>
       </div>
-      <div class="d-flex nav-item dropdown w-25 justify-content-end">
+      <div id="headerSideWrap" class="d-flex nav-item dropdown w-25 justify-content-end">
         <!-- <a
             class="nav-link dropdown-toggle me-3"
             href="#"
@@ -74,7 +74,7 @@
         <div class="col-11 col-md-9">
           <h1 class="text-uppercase placeholder-glow">
             Ocean of Auctions
-            <span class="text-capitalize text-secondary fs-4 placeholder"
+            <span id="searchHeading"class="text-capitalize text-secondary fs-4 placeholder"
               >Search ""</span
             >
           </h1>
@@ -124,5 +124,6 @@
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="./src/js/search.js"></script>
+    <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
 </html>
