--- a/welcome.html
+++ b/welcome.html
@@ -133,5 +133,6 @@
     </main>
     <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
 </html>
