--- a/listing.html
+++ b/listing.html
@@ -106,12 +106,12 @@
             <div class="listings-descriptions mx-2 mt-2 placeholder">
               Description
             </div>
-            <div class="text-secondary mx-2 mt-2 d-flex">
-              <div class="bids-count me-1 placeholder">1 bid(s) -</div>
-              <div class="dates-end placeholder">End: 23:59 18/12/2022</div>
+            <div class="text-secondary mx-2 mt-2 row justify-content-start">
+              <div class="bids-count p-0 col-3 col-md-2 col-xxl-1 placeholder">1 bid(s) -</div>
+              <div class="dates-end p-0 col placeholder">End: 23:59 18/12/2022</div>
             </div>
           </div>
-          <div class="mt-4 mb-5">
+          <div id="bids" class="mt-4 mb-5">
             <!-- <div class="card bg-dark py-2">
               <div class="ps-2 d-flex align-items-center">
                 <a
