added profile info and listings to profile page

--- a/profile.html
+++ b/profile.html
@@ -90,12 +90,12 @@
                     Name
                   </h1>
                   <div class="text-secondary">
-                    <div class="d-flex align-items-center placeholder">
-                      Credits: <span id="credits">0</span>
+                    <div class="d-flex align-items-center placeholder credits-wrap">
+                      Credits: <span id="credits" class="ms-1">0</span>
                       <!-- <img src="./assets/icons/currency-icon.png" class="currency-icon ms-1"> -->
                     </div>
                   </div>
-                  <div class="text-secondary placeholder">
+                  <div class="text-secondary placeholder listings-wrap">
                     Listings: <span id="listings"></span>
                   </div>
                 </div>
