improved placement of listings images  and tags

--- a/listing.html
+++ b/listing.html
@@ -71,7 +71,7 @@
             <h1 id="listingName" class="text-uppercase placeholder">
               Listing name
             </h1>
-            <div id="tags" class="px-2 d-flex justify-content-center mb-2">
+            <div id="tags" class="px-2 d-flex flex-wrap justify-content-center mb-2">
               <!-- <div
                 class="badge bg-secondary text-primary text-lowercase rounded-pill px-3 py-2 m-auto"
               >
@@ -96,11 +96,11 @@
               <div class="owners-options"></div>
             </div>
             <div
-              class="listing-image mt-2 w-100 overflow-hidden position-relative"
+              class="listing-image mt-2 w-100 overflow-hidden d-flex align-items-center"
             >
               <img
                 id="listingImage"
-                class="position-absolute bottom-0 placeholder text-secondary"
+                class="placeholder text-secondary"
               />
             </div>
             <div class="listings-descriptions mx-2 mt-2 placeholder">
