Fixed Edit and delete function on index and profile

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 data-bs-parent="#accordionAuction"
               >
                 <div class="accordion-body">
-                  <div class="errorFeedback"></div>
+                  <div class="errorFeedback text-danger rounded"></div>
                   <form id="auctionForm" class="row flex-column flex-nowrap mh-100">
                     <div class="col-12 col-sm-10 col-md-8">
                       <label for="titleInput">Title *</label>
