Implemented profile image to header when logged in ++
And function to send user to Welcome page if not logged in

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             src="./assets/icons/profile-icon.png"
             alt="Empty profile picture, as well as dropdown menu"
             id="header-profile-icon"
+            class="rounded-circle"
           />
         </a>
         <ul
@@ -60,7 +61,7 @@
           aria-labelledby="dropdownAccountButton"
         >
           <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
-          <li><a class="dropdown-item" href="">Log Out</a></li>
+          <li class="dropdown-item" id="logOut">Log Out</li>
         </ul>
       </div>
     </header>
