--- a/listing.html
+++ b/listing.html
@@ -53,6 +53,7 @@
             src="./assets/icons/profile-icon.png"
             alt="Empty profile picture, as well as dropdown menu"
             id="header-profile-icon"
+            class="rounded-circle"
           />
         </a>
         <ul
