--- a/listing.html
+++ b/listing.html
@@ -61,7 +61,7 @@
           aria-labelledby="dropdownAccountButton"
         >
           <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
-          <li><a class="dropdown-item" href="">Log Out</a></li>
+          <li class="dropdown-item" id="logOut">Log Out</li>
         </ul>
       </div>
     </header>
