--- a/listing.html
+++ b/listing.html
@@ -72,7 +72,10 @@
             <h1 id="listingName" class="text-uppercase placeholder">
               Listing name
             </h1>
-            <div id="tags" class="px-2 d-flex flex-wrap justify-content-center mb-2">
+            <div
+              id="tags"
+              class="px-2 d-flex flex-wrap justify-content-center mb-2"
+            >
               <!-- <div
                 class="badge bg-secondary text-primary text-lowercase rounded-pill px-3 py-2 m-auto"
               >
@@ -82,7 +85,9 @@
           </div>
           <div class="card bg-dark py-2 placeholder-glow">
             <div class="ps-2 d-flex align-items-center">
-              <div class="d-flex align-items-center justify-content-between w-100 text-secondary">
+              <div
+                class="d-flex align-items-center justify-content-between w-100 text-secondary"
+              >
                 <a
                   id="userLink"
                   class="text-decoration-none d-flex align-items-center"
@@ -91,7 +96,9 @@
                     id="userImage"
                     class="profile-images placeholder rounded-circle"
                   />
-                  <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">Name</h2>
+                  <h2 id="userName" class="h3 m-0 ms-2 fs-4 placeholder">
+                    Name
+                  </h2>
                 </a>
               </div>
               <div class="owners-options"></div>
@@ -99,17 +106,18 @@
             <div
               class="listing-image mt-2 w-100 overflow-hidden d-flex align-items-center"
             >
-              <img
-                id="listingImage"
-                class="placeholder text-secondary"
-              />
+              <img id="listingImage" class="placeholder text-secondary" />
             </div>
             <div class="listings-descriptions mx-2 mt-2 placeholder">
               Description
             </div>
             <div class="text-secondary mx-2 mt-2 row justify-content-start">
-              <div class="bids-count p-0 col-3 col-md-2 col-xxl-1 placeholder">1 bid(s) -</div>
-              <div class="dates-end p-0 col placeholder">End: 23:59 18/12/2022</div>
+              <div class="bids-count p-0 col-3 col-md-2 col-xxl-1 placeholder">
+                1 bid(s) -
+              </div>
+              <div class="dates-end p-0 col placeholder">
+                End: 23:59 18/12/2022
+              </div>
             </div>
           </div>
           <div id="bids" class="mt-4 mb-5">
