--- a/profile.html
+++ b/profile.html
@@ -27,18 +27,21 @@
           >
         </a>
         <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
-            <form
-              id="searchForm"
-              class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
-            >
-              <img
-                src="./assets/icons/search-icon.png"
-                id="header-search-icon"
-                class="search-icon p-0"
-              />
-              <input id="searchInput" class="bg-secondary text-dark search-input form-control" />
-            </form>
-          </div>
+          <form
+            id="searchForm"
+            class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
+          >
+            <img
+              src="./assets/icons/search-icon.png"
+              id="header-search-icon"
+              class="search-icon p-0"
+            />
+            <input
+              id="searchInput"
+              class="bg-secondary text-dark search-input form-control"
+            />
+          </form>
+        </div>
       </div>
       <div class="d-flex nav-item dropdown w-25 justify-content-end">
         <a
@@ -78,42 +81,85 @@
                 class="p-3 m-0 bg-dark rounded-start d-flex align-items-center"
               >
                 <div>
-                  <button class="dropdown-item disabled position-relative" id="editImageBtn" data-bs-toggle="modal" data-bs-target="#editImageModal">
+                  <button
+                    class="dropdown-item disabled position-relative"
+                    id="editImageBtn"
+                    data-bs-toggle="modal"
+                    data-bs-target="#editImageModal"
+                  >
                     <img
-                    id="profileImage"
-                    class="placeholder rounded-circle bg-secondary"
-                  />
+                      id="profileImage"
+                      class="placeholder rounded-circle bg-secondary"
+                    />
                   </button>
                 </div>
-                <div class="modal fade" id="editImageModal" tabindex="-1" aria-labelledby="editImageLabel" aria-hidden="true">
+                <div
+                  class="modal fade"
+                  id="editImageModal"
+                  tabindex="-1"
+                  aria-labelledby="editImageLabel"
+                  aria-hidden="true"
+                >
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content bg-dark">
                       <div class="modal-header">
-                        <h1 class="modal-title fs-5 text-uppercase" id="editImageLabel">Edit Profile Image</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h1
+                          class="modal-title fs-5 text-uppercase"
+                          id="editImageLabel"
+                        >
+                          Edit Profile Image
+                        </h1>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
                       </div>
                       <div class="modal-body">
-                        <div id="editImageError" class="rounded text-danger"></div>
-                        <form id="editImageForm" class="row flex-column flex-nowrap mh-100">
+                        <div
+                          id="editImageError"
+                          class="rounded text-danger"
+                        ></div>
+                        <form
+                          id="editImageForm"
+                          class="row flex-column flex-nowrap mh-100"
+                        >
                           <div class="mt-2">
                             <label for="editImageInput"
                               >Profile Image Direct Link
                               <span class="text-secondary"
                                 >(generate on
-                                <a href="https://postimages.org/"  target="_blank">PostImages.org</a
+                                <a
+                                  href="https://postimages.org/"
+                                  target="_blank"
+                                  >PostImages.org</a
                                 >)</span
                               ></label
                             >
                             <input
-                            id="editImageInput"
-                            class="bg-secondary p-1 mt-2 rounded form-control text-dark"
-                            title="must be direct image link"
-                            required
-                          />
+                              id="editImageInput"
+                              class="bg-secondary p-1 mt-2 rounded form-control text-dark"
+                              title="must be direct image link"
+                              required
+                            />
                           </div>
                           <div class="modal-footer mt-4 pb-0">
-                            <button type="button" class="btn btn-dark border border-1 border-danger text-danger" data-bs-dismiss="modal">Close</button>
-                            <button id="editImageFormButton" type="submit" for="editImageForm" class="btn btn-primary border border-1 border-secondary text-secondary">Save changes</button>
+                            <button
+                              type="button"
+                              class="btn btn-dark border border-1 border-danger text-danger"
+                              data-bs-dismiss="modal"
+                            >
+                              Close
+                            </button>
+                            <button
+                              id="editImageFormButton"
+                              type="submit"
+                              for="editImageForm"
+                              class="btn btn-primary border border-1 border-secondary text-secondary"
+                            >
+                              Save changes
+                            </button>
                           </div>
                         </form>
                       </div>
@@ -128,7 +174,9 @@
                     Name
                   </h1>
                   <div class="text-secondary">
-                    <div class="d-flex align-items-center placeholder credits-wrap">
+                    <div
+                      class="d-flex align-items-center placeholder credits-wrap"
+                    >
                       Credits: <span id="credits" class="ms-1">0</span>
                     </div>
                   </div>
@@ -143,8 +191,7 @@
               <div class="posts-container">
                 <div class="card bg-dark py-2 placeholder-glow">
                   <div class="d-flex justify-content-between">
-                    <div id="tags" class="px-2">
-                    </div>
+                    <div id="tags" class="px-2"></div>
                     <div class="owners-options mx-2"></div>
                   </div>
                   <div class="ps-2 d-flex align-items-center">
