--- a/search.html
+++ b/search.html
@@ -40,23 +40,26 @@
           </form>
         </div>
       </div>
-      <div id="headerSideWrap" class="d-flex nav-item dropdown w-25 justify-content-end">
-      </div>
+      <div
+        id="headerSideWrap"
+        class="d-flex nav-item dropdown w-25 justify-content-end"
+      ></div>
     </header>
     <main class="container my-4">
       <div class="row justify-content-center">
         <div class="col-11 col-md-9">
           <h1 class="text-uppercase placeholder-glow">
             Ocean of Auctions
-            <span id="searchHeading"class="text-capitalize text-secondary fs-4 placeholder"
+            <span
+              id="searchHeading"
+              class="text-capitalize text-secondary fs-4 placeholder"
               >Search ""</span
             >
           </h1>
           <div class="posts-container">
             <div class="card bg-dark py-2 placeholder-glow">
               <div class="d-flex justify-content-between">
-                <div id="tags" class="px-2">
-                </div>
+                <div id="tags" class="px-2"></div>
                 <div class="owners-options mx-2"></div>
               </div>
               <div class="ps-2 d-flex align-items-center">
