updated meta description

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ADD DESCRIPTION HERE --------" />
+    <meta name="description" content="Sign up to Pearls, the auctioning website. And start searching for pearls and other hidden treasures in the big ocean of auctions today!" />
     <meta author="Dina Olufsen" />
     <title>Pearls | Sign up</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
