--- a/listing.html
+++ b/listing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ADD DESCRIPTION HERE --------" />
+    <meta name="description" content="A Listing on Pearls, the auctioning website. Search for pearls and other hidden treasures in the big ocean of auctions." />
     <meta author="Dina Olufsen" />
     <title>Pearls | listing</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
@@ -76,11 +76,6 @@
               id="tags"
               class="px-2 d-flex flex-wrap justify-content-center mb-2"
             >
-              <!-- <div
-                class="badge bg-secondary text-primary text-lowercase rounded-pill px-3 py-2 m-auto"
-              >
-                TAGS
-              </div> -->
             </div>
           </div>
           <div class="card bg-dark py-2 placeholder-glow">
@@ -121,44 +116,9 @@
             </div>
           </div>
           <div id="bids" class="mt-4 mb-5">
-            <!-- <div class="card bg-dark py-2">
-              <div class="ps-2 d-flex align-items-center">
-                <a
-                  href="#"
-                  class="text-decoration-none d-flex align-items-center"
-                >
-                  <img
-                    src="./assets/icons/profile-icon.png"
-                    class="profile-images"
-                  />
-                  <div class="m-0 ms-2 fw-bold">
-                    Name
-                  </div>
-                </a>
-                <div class="ms-3">Bid: <span class="bid">100</span><img src="./assets/icons/currency-icon.png" class="currency-icon ms-1"></div>
-              </div>
-            </div> -->
-
-            <!-- <div class="d-flex justify-content-center p-2 bg-secondary rounded border border-primary">
-              <div class="text-primary">No bid has been made.</div>
-            </div> -->
           </div>
           <div class="mb-5">
             <div class="make-bid">
-              <!-- <h2 class="text-uppercase">Want to make a bid?</h2>
-              <div class="card bg-dark py-3 px-4">
-                <div id="bidFeedback" class="d-flex justify-content-center text-danger border-danger"></div>
-                <div class="fs-5">Amount</div>
-                <form class="d-flex gap-2">
-                  <input id="bidInput" class="bg-secondary search-input form-control mh-100" />
-                  <button id="bidBtn" class="btn btn-primary border border-secondary text-secondary py-1 w-75">Send bid</button>
-                </form>
-                <div class="text-secondary fs-6">Your credits: <span id="creditAmount">1000</span><img src="./assets/icons/currency-icon.png" class="currency-icon ms-1"></div>
-              </div> -->
-
-              <!-- <div class="d-flex justify-content-center p-2 bg-danger rounded border border-primary">
-                <div class="text-primary">Time has ran out for this listing.</div>
-              </div> -->
             </div>
           </div>
         </div>
