--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ADD DESCRIPTION HERE --------" />
+    <meta name="description" content="Search for pearls and other hidden treasures in the big ocean of auctions on Pearls." />
     <meta author="Dina Olufsen" />
     <title>Pearls | Search</title>
     <link rel="stylesheet" href="./dist/css/styles.css" />
