corrected bootstrap file script in html

--- a/search.html
+++ b/search.html
@@ -98,8 +98,7 @@
       <div class="fs-6">© Dina Olufsen - 2022</div>
       <div id="arrowUp" class="fs-3">🡱</div>
     </footer>
-    <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./src/js/search.js"></script>
     <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
