--- a/signup.html
+++ b/signup.html
@@ -89,8 +89,7 @@
       <div id="bg-image" class="position-absolute top-0 end-0"></div>
     </main>
     <footer class="mt-auto"></footer>
-    <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./src/js/signup.js"></script>
   </body>
 </html>
