--- a/welcome.html
+++ b/welcome.html
@@ -97,8 +97,7 @@
         </div>
       </div>
     </main>
-    <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./src/js/modules/searchSubmit.js"></script>
   </body>
 </html>
