--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
     <main>
       <div class="container position-relative mb-5">
         <div class="row d-flex justify-content-center mt-4">
-          <form class="col-11 col-md-8 col-lg-6 card bg-dark p-5 mh-100">
+          <form action="./login.html" class="col-11 col-md-8 col-lg-6 card bg-dark p-5 mh-100">
             <h1 class="fs-2 text-uppercase mb-3">Sign up</h1>
             <div class="errorFeedback text-danger text-center rounded"></div>
             <label class="fs-5 mt-2" for="nameInput">Username</label>
