--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
           class="dropdown-menu dropdown-menu-end"
           aria-labelledby="dropdownAccountButton"
         >
-          <li><a class="dropdown-item" href="/profile.html">Profile</a></li>
+          <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
           <li class="dropdown-item" id="logOut">Log Out</li>
         </ul>
       </div>
