Various Improvements (Forms, Window Title,  Listing Title)

--- a/login.html
+++ b/login.html
@@ -53,6 +53,7 @@
               id="passwordInput"
               type="password"
               class="bg-secondary p-1 rounded form-control text-dark"
+              required
             />
             <div id="passwordFeedback">Please enter your password</div>
             <div class="form-check mt-3">
@@ -60,6 +61,7 @@
                 id="rememberCheck"
                 type="checkbox"
                 class="form-check-input me-2"
+                required
               />
               <label
                 class="form-check-label text-secondary fs-6"
