--- a/profile.html
+++ b/profile.html
@@ -28,6 +28,7 @@
         </a>
         <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
           <form
+            action="./search.html"
             id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
           >
@@ -122,6 +123,7 @@
                           class="rounded text-danger"
                         ></div>
                         <form
+                          action="./profile.html"
                           id="editImageForm"
                           class="row flex-column flex-nowrap mh-100"
                         >
