--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </a>
         <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
           <form
+            action="./search.html"
             id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
           >
@@ -95,6 +96,7 @@
                   <div class="errorFeedback text-danger rounded"></div>
                   <form
                     id="auctionForm"
+                    action="./index.html"
                     class="row flex-column flex-nowrap mh-100"
                   >
                     <div class="col-12 col-sm-10 col-md-8">
@@ -102,6 +104,7 @@
                       <input
                         id="titleInput"
                         class="bg-secondary p-1 rounded form-control text-dark"
+                        required
                       />
                     </div>
                     <div class="col-10 col-sm-7 col-md-6 col-lg-4 mt-3">
@@ -111,6 +114,7 @@
                         type="datetime-local"
                         class="bg-secondary p-1 rounded form-control text-dark"
                         min=""
+                        required
                       />
                     </div>
                     <div class="mt-3">
