--- a/listing.html
+++ b/listing.html
@@ -25,6 +25,7 @@
         </a>
         <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
           <form
+            action="./search.html"
             id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
           >
@@ -69,7 +70,7 @@
       <div class="row justify-content-center">
         <div class="col-11 col-md-9 placeholder-glow">
           <div class="d-flex">
-            <h1 id="listingName" class="text-uppercase placeholder">
+            <h1 id="listingName" class="text-uppercase placeholder overflow-hidden">
               Listing name
             </h1>
             <div
