--- a/search.html
+++ b/search.html
@@ -25,6 +25,7 @@
         </a>
         <div class="col-8 col-sm-6 col-md-5 col-lg-4 col-xxl-3">
           <form
+            action="./search.html"
             id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
           >
