--- a/welcome.html
+++ b/welcome.html
@@ -57,6 +57,7 @@
             Auctions
           </p>
           <form
+            action="./search.html"
             id="searchForm"
             class="d-flex bg-secondary rounded h-100 p-1 align-items-center"
           >
